# frizzle

./: pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  getting_started.rst  index.rst  installation.rst  matplotlibrc  requirements.txt
notebooks/: how_to_combine_spectra.ipynb
paper/: main.tex
src/frizzle/: __init__.py  test_utils.py  utils.py
