[project]
name = "frizzle"
version = "0.1.3" 
readme = "README.md"
license = {text = "LICENSE.md"}
description = "Combine spectra by forward modelling" 
keywords = ["astronomy software"]
authors = [
  {name = "Andrew R. Casey", email = "andrew.casey@monash.edu"},
  {name = "David W. Hogg", email = "david.hogg@nyu.edu"}
]
maintainers = [
  {name = "Andy Casey", email = "andrew.casey@monash.edu"},
]
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
  "jax-finufft>=0.1.0",
  "lineax",
  "matplotlib>=3.9.4",
  "jaxopt>=0.8.5",
]
requires-python = ">= 3.9"

[classifiers]
development_status = "4 - Beta"
intended_audience = "Science/Research"
natural_language = "English"
programming_language = "Python :: 3"
topic = ["Documentation :: Sphinx", "Topic :: Software Development :: Libraries  :: Python Modules"]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["frizzle"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-sugar",
  "pre-commit",
  "black",
  "coveralls",
  "ipython",
  "matplotlib",
  "ipykernel>=6.30.1",
  "sphinx>=7.4.7",
  "sphinx-rtd-theme>=3.0.2",
  "myst-parser>=3.0.1",
  "furo>=2025.7.19",
  "tqdm>=4.67.1",
]
